# chip_8

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: app.cpp.330FEAB304547231.idx  app.hpp.1273A933CC06AB6F.idx  main.cpp.3B74D2F5EFFA3128.idx  main.cpp.800BE2BC97330ADF.idx
include/chip_8/: app.hpp
src/: app.cpp  main.cpp
